Google Fonts deactivation improvements.
Changed the with block to an if block to enable turning off of Google Fonts from config.

--- a/layouts/partials/docs/html-head.html
+++ b/layouts/partials/docs/html-head.html
@@ -3,9 +3,8 @@
 <title>{{- template "title" . }} | {{ .Site.Title -}}</title>
 
 <!-- Fonts for the theme -->
-{{ with .Site.Params.googleFonts | default "true" }}
+{{ if default true .Site.Params.googleFonts }}
 	<link href="https://fonts.googleapis.com/css?family=Oxygen|Oxygen+Mono:300,400,700" rel="stylesheet">
-{{ else }}
 {{ end }}
 
 <!-- Theme stylesheet, you can customize scss by creatig `assets/custom.scss` in your website -->
