Updated googleFonts parameter behaviour
Congif googlefonts parameter now loads (by default or discards by setting) locally loaded Oxygen from _fonts.scss based on the user's preference.

--- a/layouts/partials/docs/html-head.html
+++ b/layouts/partials/docs/html-head.html
@@ -4,7 +4,8 @@
 
 <!-- Fonts for the theme -->
 {{ if default true .Site.Params.googleFonts }}
-	<link href="https://fonts.googleapis.com/css?family=Oxygen|Oxygen+Mono:300,400,700" rel="stylesheet">
+	{{ $fonts := resources.Get "_fonts.scss" | resources.ToCSS | resources.Minify | resources.Fingerprint }}
+	<link rel="stylesheet" href="{{ $fonts.RelPermalink }}">
 {{ end }}
 
 <!-- Theme stylesheet, you can customize scss by creatig `assets/custom.scss` in your website -->
