Added body font-face specification

--- a/assets/book.scss
+++ b/assets/book.scss
@@ -19,6 +19,7 @@ body {
   color: $body-font-color;
   background: $body-background;
 	
+  font-family: "Oxygen",sans-serif;
   font-weight: $body-font-weight;
 
   text-rendering: optimizeLegibility;
