--- a/assets/_markdown.scss
+++ b/assets/_markdown.scss
@@ -10,7 +10,7 @@ $block-border-radius: 0.15rem;
     line-height: 1.25;
 
     // remove padding at the beginning of page
-    &:first-child { 
+    &> :first-child { 
       margin-top: 0;
       line-height: 1em;
     }
