#39, Add multi-column shortcode

--- a/assets/_utils.scss
+++ b/assets/_utils.scss
@@ -2,6 +2,14 @@
   display: flex;
 }
 
+.flex-auto {
+  flex: 1 1 auto;
+}
+
+.flex-even {
+  flex: 1 1;
+}
+
 .justify-start {
   justify-content: flex-start;
 }
