--- a/assets/book.scss
+++ b/assets/book.scss
@@ -149,21 +149,9 @@ ul.pagination {
   }
 }
 
-.book-git-footer {
-  display: flex;
-  margin-top: $padding-16;
-  font-size: $font-size-14;
-  align-items: baseline;
-
-  img {
-    width: $font-size-14;
-    vertical-align: bottom;
-  }
-}
-
 .book-footer {
   display: flex;
-  margin-top: $padding-16;
+  padding-top: $padding-16;
   font-size: $font-size-14;
   align-items: baseline;
 
