--- a/layouts/shortcodes/expand.html
+++ b/layouts/shortcodes/expand.html
@@ -6,7 +6,7 @@
     </div>
     <input type="checkbox" style="display: none" />
     <div class="book-expand-content markdown-inner">
-      {{- .Inner | markdownify -}}
+      {{ .Inner | markdownify }}
     </div>
   </label>
 </div>
