--- a/layouts/shortcodes/tab.html
+++ b/layouts/shortcodes/tab.html
@@ -8,5 +8,5 @@
     
   {{ .Parent.Scratch.Add $group (dict "Name" $name "Content" .Inner) }}
 {{ else }}
-  {{- errorf "%q: tab shortcode must be inside tabs shortcode" .Page.Path -}}
+  {{ errorf "%q: 'tab' shortcode must be inside 'tabs' shortcode" .Page.Path }}
 {{ end}}
