--- a/assets/_markdown.scss
+++ b/assets/_markdown.scss
@@ -8,12 +8,12 @@ $block-border-radius: 0.15rem;
   h1, h2, h3, h4, h5 {
     font-weight: 400;
     line-height: 1.25;
+  }
 
-    // remove padding at the beginning of page
-    &> :first-child { 
-      margin-top: 0;
-      line-height: 1em;
-    }
+  // remove padding at the beginning of page
+  > :first-child {
+    margin-top: 0;
+    line-height: 1;
   }
 
   b, optgroup, strong {
@@ -71,5 +71,11 @@ $block-border-radius: 0.15rem;
     tr:nth-child(2n) {
       background: $gray-100;
     }
+  }
+
+  hr {
+    height: $padding-1;
+    border: none;
+    background: $gray-200;
   }
 }
