Change edit and date icons

--- a/assets/book.scss
+++ b/assets/book.scss
@@ -156,8 +156,8 @@ ul.pagination {
   align-items: baseline;
 
   img {
-    width: $font-size-14;
-    vertical-align: bottom;
+    width: 1em;
+    height: 1em;
   }
 }
 
