--- a/layouts/partials/docs/git-footer.html
+++ b/layouts/partials/docs/git-footer.html
@@ -4,14 +4,14 @@
   <div>
     {{ $date := .AuthorDate.Local.Format (default "January 2, 2006" $.Site.Params.BookDateFormat) }}
     <a href="{{ $.Site.Params.BookRepo }}/commit/{{ .Hash }}" title='Last modified {{ $date }} by {{ .AuthorName }}' target="_blank" rel="noopener">
-      <img src="{{ "svg/code-merge.svg" | relURL }}" alt="Changed" /> {{ $date }}
+      <img src="{{ "svg/calendar.svg" | relURL }}" alt="Changed" /> {{ $date }}
     </a>
   </div>
   {{ end }}
   {{ with .Site.Params.BookEditPath }}
   <div>
     {{ if $.File }}<a href="{{ $.Site.Params.BookRepo }}/{{ . }}/{{ $.File.Path }}" target="_blank" rel="noopener">
-      <img src="{{ "svg/code-fork.svg" | relURL }}" alt="Edit" /> Edit this page
+      <img src="{{ "svg/edit.svg" | relURL }}" alt="Edit" /> Edit this page
     </a>{{ end }}
   </div>
   {{ end }}
