--- a/layouts/shortcodes/tabs.html
+++ b/layouts/shortcodes/tabs.html
@@ -2,18 +2,32 @@
 {{ $id := .Get 0 }}
 {{ $group := printf "tabs-%s" $id }}
 
+<!-- 
 <div class="book-tabs">
   <div class="book-tabs-head">
-  {{ range $index, $tab :=  .Scratch.Get $group}}
+  {{ range $index, $tab :=  .Scratch.Get $group }}
     <label for="{{ printf "%s-%d" $group $index }}">
-      <span>{{ $tab.Name }}</span>
+      {{ $tab.Name }}
     </label>
   {{ end }}
   </div>
-  {{ range $index, $tab := .Scratch.Get $group}}
+  {{ range $index, $tab := .Scratch.Get $group }}
   <input type="radio" name="{{ $group }}" style="display: none;" id="{{ printf "%s-%d" $group $index }}" {{ if not $index }}checked="checked"{{ end }} />
-  <div class="book-tabs-content markdown-inner">
-    <span>{{ .Content | markdownify }}</span>
+  <div class="book-tabs-content book-tabs-{{ $index }} markdown-inner">
+    {{ .Content | markdownify }}
   </div>
   {{ end }}
+</div>
+-->
+
+<div class="book-tabs">
+{{ range $index, $tab :=  .Scratch.Get $group }}
+  <input type="radio" name="{{ $group }}" style="display: none;" id="{{ printf "%s-%d" $group $index }}" {{ if not $index }}checked="checked"{{ end }} />
+  <label for="{{ printf "%s-%d" $group $index }}">
+    {{ $tab.Name }}
+  </label>
+  <div class="book-tabs-content markdown-inner">
+    {{ .Content | markdownify }}
+  </div>
+{{ end }}
 </div>
