Remove extra spacing around columns view

--- a/assets/_shortcode.scss
+++ b/assets/_shortcode.scss
@@ -1,6 +1,6 @@
 @import "variables";
 
-.markdown-inner {
+.markdown-inner { // Util class to remove extra margin in nested markdown content
   > :first-child {
     margin-top: 0;
   }
