#39, Add button shortcode

--- a/assets/_shortcode.scss
+++ b/assets/_shortcode.scss
@@ -67,3 +67,16 @@
     margin-left: $padding-16 * 2;
   }
 }
+
+// {{< button >}}
+a.book-btn {
+  display: inline-block;
+  color: $color-link !important;
+  text-decoration: none !important;
+  border: $padding-1 solid $color-link;
+  border-radius: $padding-4;
+  padding: $padding-4 $padding-16;
+  margin-top: $padding-8;
+  margin-bottom: $padding-8;
+  cursor: pointer;
+}
