--- a/layouts/home.html
+++ b/layouts/home.html
@@ -5,6 +5,9 @@
 <head>
   {{ partial "docs/html-head" . }}
   {{ partial "docs/inject/head" . }}
+  {{ range .Site.Params.custom_css -}}
+    <link rel="stylesheet" href="{{ . | absURL }}">
+  {{- end }}
 </head>
 {{ $content := `
 # Hugo Book Theme
