Remove flex from mermaid chart

--- a/layouts/shortcodes/mermaid.html
+++ b/layouts/shortcodes/mermaid.html
@@ -4,6 +4,6 @@
 {{ .Page.Scratch.Set "mermaid" true }}
 {{ end }}
 
-<p class="mermaid flex align-center">
+<p class="mermaid">
   {{ .Inner }}
 </p>
