--- a/assets/_variables.scss
+++ b/assets/_variables.scss
@@ -27,7 +27,7 @@ $color-dark-link: $gray-800;
 
 $body-background: white;
 $body-font-color: $gray-800;
-$body-font-weight: 400;
+$body-font-weight: normal;
 
 $body-min-width: 20rem;
 $container-max-width: 80rem;
