--- a/assets/book.scss
+++ b/assets/book.scss
@@ -38,7 +38,7 @@ h2,
 h3,
 h4,
 h5 {
-  font-weight: 400;
+  font-weight: $body-font-weight;
 }
 
 a {
@@ -117,7 +117,7 @@ ul.pagination {
 
   > a,
   > span {
-    font-weight: 600;
+    font-weight: bolder;
   }
 
   > ul {
