--- a/assets/_fonts.scss
+++ b/assets/_fonts.scss
@@ -1,64 +1,45 @@
-/* oxygen-300 - latin */
+/* roboto-300italic - latin */
 @font-face {
-  font-family: 'Oxygen';
-  font-style: normal;
+  font-family: 'Roboto';
+  font-style: italic;
   font-weight: 300;
-  font-display: swap;
-  src: url('fonts/oxygen-v8-latin-300.eot'); /* IE9 Compat Modes */
-  src: local('Oxygen Light'), local('Oxygen-Light'),
-       url('fonts/oxygen-v8-latin-300.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('fonts/oxygen-v8-latin-300.woff2') format('woff2'), /* Super Modern Browsers */
-       url('fonts/oxygen-v8-latin-300.woff') format('woff'), /* Modern Browsers */
-       url('fonts/oxygen-v8-latin-300.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('fonts/oxygen-v8-latin-300.svg#Oxygen') format('svg'); /* Legacy iOS */
+  src: local('Roboto Light Italic'), local('Roboto-LightItalic'),
+       url('fonts/roboto-v19-latin-300italic.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+       url('fonts/roboto-v19-latin-300italic.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
-/* oxygen-regular - latin */
+/* roboto-regular - latin */
 @font-face {
-  font-family: 'Oxygen';
+  font-family: 'Roboto';
   font-style: normal;
   font-weight: 400;
-  font-display: swap;
-  src: url('fonts/oxygen-v8-latin-regular.eot'); /* IE9 Compat Modes */
-  src: local('Oxygen Regular'), local('Oxygen-Regular'),
-       url('fonts/oxygen-v8-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('fonts/oxygen-v8-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('fonts/oxygen-v8-latin-regular.woff') format('woff'), /* Modern Browsers */
-       url('fonts/oxygen-v8-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('fonts/oxygen-v8-latin-regular.svg#Oxygen') format('svg'); /* Legacy iOS */
+  src: local('Roboto'), local('Roboto-Regular'),
+       url('fonts/roboto-v19-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+       url('fonts/roboto-v19-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
-/* oxygen-700 - latin */	
-@font-face {	
-  font-family: 'Oxygen';	
-  font-style: normal;	
-  font-weight: 700;	
-  font-display: swap;	
-  src: url('fonts/oxygen-v8-latin-700.eot'); /* IE9 Compat Modes */	
-  src: local('Oxygen Bold'), local('Oxygen-Bold'),	
-       url('fonts/oxygen-v8-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */	
-       url('fonts/oxygen-v8-latin-700.woff2') format('woff2'), /* Super Modern Browsers */	
-       url('fonts/oxygen-v8-latin-700.woff') format('woff'), /* Modern Browsers */	
-       url('fonts/oxygen-v8-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */	
-       url('fonts/oxygen-v8-latin-700.svg#Oxygen') format('svg'); /* Legacy iOS */	
-}	
-/* oxygen-mono-regular - latin */	
-@font-face {	
-  font-family: 'Oxygen Mono';	
-  font-style: normal;	
-  font-weight: 400;	
-  font-display: swap;	
-  src: url('fonts/oxygen-mono-v6-latin-regular.eot'); /* IE9 Compat Modes */	
-  src: local('Oxygen Mono'), local('OxygenMono-Regular'),	
-       url('fonts/oxygen-mono-v6-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */	
-       url('fonts/oxygen-mono-v6-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */	
-       url('fonts/oxygen-mono-v6-latin-regular.woff') format('woff'), /* Modern Browsers */	
-       url('fonts/oxygen-mono-v6-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */	
-       url('fonts/oxygen-mono-v6-latin-regular.svg#OxygenMono') format('svg'); /* Legacy iOS */	
+/* roboto-700 - latin */
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 700;
+  src: local('Roboto Bold'), local('Roboto-Bold'),
+       url('fonts/roboto-v19-latin-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+       url('fonts/roboto-v19-latin-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+
+/* roboto-mono-regular - latin */
+@font-face {
+  font-family: 'Roboto Mono';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Roboto Mono'), local('RobotoMono-Regular'),
+       url('fonts/roboto-mono-v6-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+       url('fonts/roboto-mono-v6-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
 body {
-  font-family: 'Oxygen', sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 code {
-  font-family: 'Oxygen Mono', monospace;
+  font-family: 'Roboto Mono', monospace;
 }
