Add custom class support for mermaid and button shortcodes

--- a/assets/_markdown.scss
+++ b/assets/_markdown.scss
@@ -28,6 +28,10 @@ $block-border-radius: 0.15rem;
     }
   }
 
+  img {
+    max-width: 100%;
+  }
+
   code {
     padding: 0 $padding-4;
     background: $gray-100;
