--- a/layouts/shortcodes/mermaid.html
+++ b/layouts/shortcodes/mermaid.html
@@ -4,6 +4,6 @@
 {{ .Page.Scratch.Set "mermaid" true }}
 {{ end }}
 
-<p class="mermaid">
+<p class="mermaid{{ with .Get "class" }} {{ . }}{{ end }}">
   {{ .Inner }}
 </p>
