--- a/assets/_variables.scss
+++ b/assets/_variables.scss
@@ -1,7 +1,14 @@
+// Used in layout
 $padding-1: 1px;
 $padding-4: 0.25rem;
 $padding-8: 0.5rem;
 $padding-16: 1rem;
+
+// Used in markdown and shortcodes
+$padding-em-1: 1px;
+$padding-em-4: .25em;
+$padding-em-8: .5em;
+$padding-em-16: 1em;
 
 $font-size-base: 16px;
 $font-size-12: 0.75rem;
