Set heading padding in markdown to depend on font size

--- a/assets/_markdown.scss
+++ b/assets/_markdown.scss
@@ -8,8 +8,8 @@ $block-border-radius: 0.15rem;
   h1, h2, h3, h4, h5 {
     font-weight: normal;
     line-height: 1;
-    margin-top: $padding-16 * 2;
-    margin-bottom: $padding-8;
+    margin-top: 1.5em;
+    margin-bottom: $padding-16;
   }
 
   // remove padding at the beginning of page
