Adjust some colors, font sizes, borders in markdown

--- a/assets/_markdown.scss
+++ b/assets/_markdown.scss
@@ -1,7 +1,5 @@
 @import 'variables';
 
-$block-border-radius: 0.15rem;
-
 .markdown {
   line-height: 1.6;
 
@@ -35,15 +33,15 @@ $block-border-radius: 0.15rem;
 
   code {
     padding: 0 $padding-4;
-    background: $gray-100;
-    border-radius: $block-border-radius;
+    background: $gray-200;
+    border-radius: $border-radius;
+    font-size: .875em;
   }
 
   pre {
     padding: $padding-16;
     background: $gray-100;
-    border-radius: $block-border-radius;
-    font-size: .875em;
+    border-radius: $border-radius;
     overflow-x: auto;
 
     code {
@@ -53,9 +51,11 @@ $block-border-radius: 0.15rem;
   }
 
   blockquote {
-    border-left: $padding-1*2 solid $gray-300;
     margin: $padding-16 0;
-    padding: $padding-1 $padding-16;
+    padding: $padding-4 ($padding-16 - $padding-4); //to keep total left space 16dp
+
+    border-left: $padding-4 solid $gray-200;
+    border-radius: $border-radius;
 
     :first-child { margin-top: 0; }
     :last-child { margin-bottom: 0; }
