--- a/assets/book.scss
+++ b/assets/book.scss
@@ -142,7 +142,9 @@ ul.pagination {
     border: 0;
     border-bottom: $padding-1 solid $gray-200;
     outline: none;
+
     padding: $padding-4 $padding-8 $padding-4 $padding-16 + $padding-4;
+    margin-bottom: $padding-4;
 
     width: 85%;
   
