Remove discs from pagination ul

--- a/assets/book.scss
+++ b/assets/book.scss
@@ -79,6 +79,7 @@ aside nav ul {
 ul.pagination {
   display: flex;
   justify-content: center;
+  list-style-type: none;
 
   .page-item a {
     padding: $padding-16;
