--- a/assets/_markdown.scss
+++ b/assets/_markdown.scss
@@ -62,6 +62,8 @@
   }
 
   table {
+    overflow: auto;
+    display: block;
     border-spacing: 0;
     border-collapse: collapse;
     margin-top: $padding-16;
