--- a/assets/_variables.scss
+++ b/assets/_variables.scss
@@ -25,7 +25,7 @@ $gray-900: #212529;
 $black: #000;
 
 $color-link: #004ed0;
-$color-visited-link: #8440f1;
+$color-visited-link: #004ed0;
 $color-dark-link: $gray-800;
 
 $body-background: white;
