fix expand and tabs shortcodes to work with strict Content-Security-Policy
When the Content-Security-Policy header has "style-src 'self';"
inine style elements like style="display: none" are not honored
by browsers, so add CSS to the markup classes and style them
display: none

--- a/assets/_shortcodes.scss
+++ b/assets/_shortcodes.scss
@@ -31,6 +31,10 @@
     padding: $padding-16;
   }
 
+  .book-expand-expander {
+    display: none;
+  }
+
   input[type="checkbox"]:checked + .book-expand-content {
     display: block;
   }
@@ -54,6 +58,10 @@
     padding: $padding-8 $padding-16;
     border-bottom: $padding-1 transparent;
     cursor: pointer;
+  }
+
+  .book-tabs-radio {
+    display: none;
   }
 
   .book-tabs-content {
