--- a/layouts/docs/baseof.html
+++ b/layouts/docs/baseof.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <input type="checkbox" style="display: none" id="menu-control" />
+  <input type="checkbox" id="menu-control" />
   <main class="flex container">
 
     <aside class="book-menu fixed">
@@ -23,7 +23,7 @@
 
     {{ template "toc" . }}
   </main>
-  
+
   {{ partial "docs/inject/body" . }}
   {{ template "_internal/google_analytics_async.html" . }}
 </body>
