--- a/layouts/posts/baseof.html
+++ b/layouts/posts/baseof.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <input type="checkbox" style="display: none" id="menu-control" />
+  <input type="checkbox" id="menu-control" />
   <main class="flex container">
     <aside class="book-menu fixed">
       {{ partial "docs/menu" . }}
