use class="hidden" instead of creating new classes
Use class "hidden" instead of styled classes to ensure that input elments stay
hidden when the Content-Security-Policy header has "style-src 'self';"

--- a/layouts/posts/baseof.html
+++ b/layouts/posts/baseof.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <input type="checkbox" id="menu-control" />
+  <input type="checkbox" class="hidden" id="menu-control" />
   <main class="flex container">
     <aside class="book-menu fixed">
       {{ partial "docs/menu" . }}
