Optional brand logo in the menu controlled by .Site.Params.BookLogo
- documentation in README.md and exampleSite/config.{toml,yaml}

--- a/assets/book.scss
+++ b/assets/book.scss
@@ -93,6 +93,15 @@ ul.pagination {
 
 .book-brand {
   margin-top: 0;
+
+  img {
+    max-width: 40px;
+    max-height: 40px;
+    vertical-align: middle;
+  }
+  span {
+    margin-left: 0.5rem;
+  }
 }
 
 .book-menu {
