always have <span> for title text and move spacing to logo

--- a/assets/book.scss
+++ b/assets/book.scss
@@ -98,9 +98,7 @@ ul.pagination {
     max-width: 40px;
     max-height: 40px;
     vertical-align: middle;
-  }
-  span {
-    margin-left: 0.5rem;
+    margin-right: 0.5rem;
   }
 }
 
