--- a/assets/_shortcodes.scss
+++ b/assets/_shortcodes.scss
@@ -97,3 +97,14 @@ a.book-btn {
   margin-bottom: $padding-8;
   cursor: pointer;
 }
+
+// {{< hint >}}
+.book-hint {
+  @each $name, $color in $hint-colors {
+    &.#{$name} {
+      border-left-color: $color;
+      background-color: rgba($color, 0.1);
+      // background-color: $gray-100;
+    }
+  };
+}
