Introduce SCSS plugins: dark mode and numbered headings

--- a/assets/_custom.scss
+++ b/assets/_custom.scss
@@ -1,2 +1,1 @@
-/* To be overridden by theme user */
-// @import "variables";
+/* To be overridden by theme user, scss variables are also accessible here */
