Remove BookMenuBundleActiveLinkColor parameter

--- a/assets/_main.scss
+++ b/assets/_main.scss
@@ -156,6 +156,7 @@ ul.pagination {
     border-radius: $padding-4;
 
     background: $gray-100;
+    color: $body-font-color;
 
     &:required + .book-search-spinner {
       display: block;
