--- a/assets/_main.scss
+++ b/assets/_main.scss
@@ -116,7 +116,13 @@ ul.pagination {
     @include fixed;
   }
 
-  @include dark-links;
+  a {
+    color: inherit;
+  }
+
+  a.active {
+    color: $color-link;
+  }
 }
 
 .book-section-flat {
