#92, use 'em' units for markdown line-height

--- a/assets/_markdown.scss
+++ b/assets/_markdown.scss
@@ -1,11 +1,11 @@
 @import 'variables';
 
 .markdown {
-  line-height: 1.6;
+  line-height: 1.6em;
 
   h1, h2, h3, h4, h5 {
     font-weight: normal;
-    line-height: 1;
+    line-height: 1em;
     margin-top: 1.5em;
     margin-bottom: $padding-16;
   }
