--- a/assets/_custom.scss
+++ b/assets/_custom.scss
@@ -1,1 +1,3 @@
-/* To be overridden by theme user, scss variables are also accessible here */
+/* You can add custom styles here. */
+
+// @import "plugins/numbered";
