--- a/exampleSite/assets/_variables.scss
+++ b/exampleSite/assets/_variables.scss
@@ -1,3 +1,3 @@
-/* You can override SASS variables here. Below example of simple dark theme. */
+/* You can override SASS variables here. */
 
 // @import "plugins/dark";
