--- a/layouts/partials/docs/footer.html
+++ b/layouts/partials/docs/footer.html
@@ -1,24 +1,27 @@
-{{ if or .GitInfo .Site.Params.BookEditPath }}
 <div class="book-footer justify-between">
+  {{ if .Site.IsMultiLingual }}
   {{ partial "docs/languages" . }}
+  {{ end }}
+
+  {{ if and .GitInfo .Site.Params.BookRepo }}
   {{ with .GitInfo }}
   <div>
     {{ $date := .AuthorDate.Local.Format (default "January 2, 2006" $.Site.Params.BookDateFormat) }}
-    <a class="flex align-center" href="{{ $.Site.Params.BookRepo }}/commit/{{ .Hash }}" title='Last modified {{ $date }} by {{ .AuthorName }}' target="_blank" rel="noopener">
-      <img src="{{ "svg/calendar.svg" | relURL }}" alt="Changed" />
+    <a class="flex align-center" href="{{ $.Site.Params.BookRepo }}/commit/{{ .Hash }}" title='{{ i18n "Last modified by" }} {{ .AuthorName }} | {{ $date }}' target="_blank">
+      <img src="{{ "svg/calendar.svg" | relURL }}" alt="Calendar" />
       <span>{{ $date }}</span>
     </a>
   </div>
   {{ end }}
-  {{ with .Site.Params.BookEditPath }}
+  {{ end }}
+
+  {{ if and .File .GitInfo .Site.Params.BookRepo .Site.Params.BookEditPath }}
   <div>
-    {{ if $.File }}
-    <a class="flex align-center" href="{{ $.Site.Params.BookRepo }}/{{ . }}/{{ $.File.Path }}" target="_blank" rel="noopener">
-      <img src="{{ "svg/edit.svg" | relURL }}" alt="{{ i18n "Edit this page" }}" />
+    <a class="flex align-center" href="{{ .Site.Params.BookRepo }}/{{ .Site.Params.BookEditPath }}/{{ .File.Path }}" target="_blank">
+      <img src="{{ "svg/edit.svg" | relURL }}" alt="Edit" />
       <span>{{ i18n "Edit this page" }}</span>
     </a>
-    {{ end }}
   </div>
   {{ end }}
+
 </div>
-{{ end }}
