--- a/layouts/partials/docs/footer.html
+++ b/layouts/partials/docs/footer.html
@@ -15,7 +15,7 @@
   {{ end }}
   {{ end }}
 
-  {{ if and .File .GitInfo .Site.Params.BookRepo .Site.Params.BookEditPath }}
+  {{ if and .File .Site.Params.BookRepo .Site.Params.BookEditPath }}
   <div>
     <a class="flex align-center" href="{{ .Site.Params.BookRepo }}/{{ .Site.Params.BookEditPath }}/{{ .File.Path }}" target="_blank">
       <img src="{{ "svg/edit.svg" | relURL }}" alt="Edit" />
